--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 url: https://y7kim.github.io
-baseurl: /agency-jekyll-theme/
+baseurl: /MGP-Project/
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: Future Tech
+email: team@futuretech.com
+description: "" ##"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
 
 # Team names, titles and social links
