Added Images, and chaged about section

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: "" ##"Write an awesome description for your new site here. You can 
 people:
 - name: Kay Garland
   pic: 1
-  position: Lead Designer
+  position: Editor
   social:
     - title: twitter
       url: #
